--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+/* Retro Pixel Art Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 @font-face {
   font-family: "Inter var";
   font-style: normal;
